; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_mempolicy.c_mpol_put_task_policy.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_mempolicy.c_mpol_put_task_policy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { %struct.mempolicy* }
%struct.mempolicy = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mpol_put_task_policy(%struct.task_struct* %0) #0 {
  %2 = alloca %struct.task_struct*, align 8
  %3 = alloca %struct.mempolicy*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %2, align 8
  %4 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %5 = call i32 @task_lock(%struct.task_struct* %4)
  %6 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %7 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %6, i32 0, i32 0
  %8 = load %struct.mempolicy*, %struct.mempolicy** %7, align 8
  store %struct.mempolicy* %8, %struct.mempolicy** %3, align 8
  %9 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %10 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %9, i32 0, i32 0
  store %struct.mempolicy* null, %struct.mempolicy** %10, align 8
  %11 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %12 = call i32 @task_unlock(%struct.task_struct* %11)
  %13 = load %struct.mempolicy*, %struct.mempolicy** %3, align 8
  %14 = call i32 @mpol_put(%struct.mempolicy* %13)
  ret void
}

declare dso_local i32 @task_lock(%struct.task_struct*) #1

declare dso_local i32 @task_unlock(%struct.task_struct*) #1

declare dso_local i32 @mpol_put(%struct.mempolicy*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
